<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="EM_Transport_STS" Id="{a13c4b01-0ebd-4618-9c16-67853a92e93e}">
    <Declaration><![CDATA[TYPE EM_Transport_STS :
STRUCT
	Tag				: STRING;
	State 			: E_State_PackML;
	StringState		: STRING;
	Auto 			: BOOL;
	Manueel 		: BOOL;
	Starting_SC 	: BOOL;
	Execute_SC 		: BOOL;
	Resetting_SC 	: BOOL;
	Holding_SC 		: BOOL;
	Unholding_SC 	: BOOL;
	Suspending_SC	: BOOL;
	Unsuspending_SC	: BOOL;
	Aborting_SC		: BOOL;
	Clearing_SC		: BOOL;
	Stopping_SC		: BOOL;
	Completing_SC	: BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>